@@ -17,7 +17,8 @@ IDEAS:
 
 Orgasm/Load/Preg code
 
-MORE HINTS TO FIND LEI!
+TODO:
+* MORE HINTS TO FIND LEI!
 
 
 REWRITE OF GUI:
