@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.3m
 ------------
 * Misc opening times in Rigard shops fixed.
+* Added a combat turn order listing, replacing the rather vague initiative listing.
 
 --------------------------------------------
              PREVIOUS VERSIONS
